--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -60,7 +60,7 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QDateEdit" name="dateEdit"/>
+           <widget class="QDateEdit" name="cb_initial_date"/>
           </item>
           <item row="2" column="0">
            <widget class="QLabel" name="label_3">
@@ -70,7 +70,7 @@
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QDateEdit" name="dateEdit_2"/>
+           <widget class="QDateEdit" name="cb_final_date"/>
           </item>
          </layout>
         </widget>
