--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -103,6 +103,13 @@
           <item row="1" column="1">
            <widget class="QDateEdit" name="cb_initial_date"/>
           </item>
+          <item row="3" column="1">
+           <widget class="QPushButton" name="PB_plot">
+            <property name="text">
+             <string>Plot</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
