--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -74,7 +74,7 @@
          </property>
          <layout class="QGridLayout" name="gridLayout">
           <item row="2" column="1">
-           <widget class="QDateEdit" name="cb_final_date"/>
+           <widget class="QDateEdit" name="CB_final_date"/>
           </item>
           <item row="2" column="0">
            <widget class="QLabel" name="label_3">
@@ -101,7 +101,7 @@
            <widget class="QComboBox" name="CB_stockName"/>
           </item>
           <item row="1" column="1">
-           <widget class="QDateEdit" name="cb_initial_date"/>
+           <widget class="QDateEdit" name="CB_initial_date"/>
           </item>
           <item row="3" column="1">
            <widget class="QPushButton" name="PB_plot">
