Included chart functionality, still very rough

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -31,7 +31,7 @@
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QGraphicsView" name="graphicsView"/>
+        <widget class="QChartView" name="GV_chartView"/>
        </item>
        <item>
         <widget class="QPlainTextEdit" name="plainTextEdit">
@@ -236,6 +236,13 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QChartView</class>
+   <extends>QGraphicsView</extends>
+   <header>QtCharts</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
