--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -105,6 +105,9 @@
           </item>
           <item row="3" column="1">
            <widget class="QPushButton" name="PB_plot">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>Plot</string>
             </property>
