--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -34,7 +34,7 @@
         <widget class="QChartView" name="GV_chartView"/>
        </item>
        <item>
-        <widget class="QPlainTextEdit" name="plainTextEdit">
+        <widget class="QPlainTextEdit" name="TE_messages">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -208,8 +208,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>357</width>
-            <height>107</height>
+            <width>374</width>
+            <height>114</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
