Added the correct button icons for drawing things on the chart

--- a/Icons.qrc
+++ b/Icons.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/iconImages">
         <file>pointIcon.png</file>
+        <file>lineIcon.png</file>
+        <file>handIcon.png</file>
+        <file>freeLineIcon.png</file>
     </qresource>
 </RCC>
