--- a/style.qss
+++ b/style.qss
@@ -1,6 +1,12 @@
-QGraphicsView QPushButton { background-color: grey;
+QGraphicsView QPushButton { background-color: #d9d2e9;
                             /*border-style: outset;*/
-                            border-width: 2px;
                             border-radius: 5px;
-                            padding: 6px;
+                            padding: 0px;
                             margin: 3px}
+
+QGraphicsView QPushButton:checked { background-color: #b4a7d6;
+                                    border-width: 2px;
+                                    border-color: black;
+                                    border-style: dashed}
+
+/*QGraphicsView QPushButton#handleButton {padding: 4px}*/
